@@ -18,89 +18,71 @@ package com.echothree.control.user.search.server.command;
 
 import com.echothree.control.user.search.common.form.GetSearchSortDirectionForm;
 import com.echothree.control.user.search.common.result.SearchResultFactory;
-import com.echothree.model.control.core.common.ComponentVendors;
-import com.echothree.model.control.core.common.EntityTypes;
 import com.echothree.model.control.core.common.EventTypes;
-import com.echothree.model.control.core.server.logic.EntityInstanceLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.search.server.control.SearchControl;
+import com.echothree.model.control.search.server.logic.SearchSortDirectionLogic;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.search.server.entity.SearchSortDirection;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetSearchSortDirectionCommand
-        extends BaseSimpleCommand<GetSearchSortDirectionForm> {
-    
+        extends BaseSingleEntityCommand<SearchSortDirection, GetSearchSortDirectionForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
+
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.SearchSortDirection.name(), SecurityRoles.Review.name())
-                        )))
-                )));
-        
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("SearchSortDirectionName", FieldType.ENTITY_NAME, true, null, null),
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("SearchSortDirectionName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Uuid", FieldType.UUID, false, null, null)
-                ));
+        );
     }
-    
+
     /** Creates a new instance of GetSearchSortDirectionCommand */
     public GetSearchSortDirectionCommand(UserVisitPK userVisitPK, GetSearchSortDirectionForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var result = SearchResultFactory.getGetSearchSortDirectionResult();
-        var searchSortDirectionName = form.getSearchSortDirectionName();
-        var parameterCount = (searchSortDirectionName == null ? 0 : 1) + EntityInstanceLogic.getInstance().countPossibleEntitySpecs(form);
+    protected SearchSortDirection getEntity() {
+        var searchSortDirection = SearchSortDirectionLogic.getInstance().getSearchSortDirectionByUniversalSpec(this, form, true);
 
-        if(parameterCount == 1) {
-            var searchControl = Session.getModelController(SearchControl.class);
-            SearchSortDirection searchSortDirection = null;
-
-            if(searchSortDirectionName == null) {
-                var entityInstance = EntityInstanceLogic.getInstance().getEntityInstance(this, form, ComponentVendors.ECHO_THREE.name(),
-                        EntityTypes.SearchSortDirection.name());
-                
-                if(!hasExecutionErrors()) {
-                    searchSortDirection = searchControl.getSearchSortDirectionByEntityInstance(entityInstance);
-                }
-            } else {
-                searchSortDirection = searchControl.getSearchSortDirectionByName(searchSortDirectionName);
-
-                if(searchSortDirection == null) {
-                    addExecutionError(ExecutionErrors.UnknownSearchSortDirectionName.name(), searchSortDirectionName);
-                }
-            }
-
-            if(!hasExecutionErrors()) {
-                result.setSearchSortDirection(searchControl.getSearchSortDirectionTransfer(getUserVisit(), searchSortDirection));
-                sendEvent(searchSortDirection.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
-            }
-        } else {
-            addExecutionError(ExecutionErrors.InvalidParameterCount.name());
+        if(searchSortDirection != null) {
+            sendEvent(searchSortDirection.getPrimaryKey(), EventTypes.READ, null, null, getPartyPK());
         }
-        
+
+        return searchSortDirection;
+    }
+
+    @Override
+    protected BaseResult getResult(SearchSortDirection searchSortDirection) {
+        var searchControl = Session.getModelController(SearchControl.class);
+        var result = SearchResultFactory.getGetSearchSortDirectionResult();
+
+        if(searchSortDirection != null) {
+            result.setSearchSortDirection(searchControl.getSearchSortDirectionTransfer(getUserVisit(), searchSortDirection));
+        }
+
         return result;
     }
-    
+
 }
